--- a/Javascript/dom.css
+++ b/Javascript/dom.css
@@ -1,3 +1,7 @@
+.container{
+	display: flex;
+	flex-direction: row;
+}
 .firstDiv {
 	border: 3px solid;
   	border-radius: 5px;
@@ -7,19 +11,38 @@
 	height:300px;
 }
 
-.addC {
-	border:3px solid;
-	width:900px; 
-	height:600px;
+.left {
+	border:1px solid;
+	width:800px; 
+	/*height:900px;*/
+	margin: 1em; 
+	padding: 5px;
+	background-color: white;
+}
+
+.right {
+	
+	border: 1px solid;
+	width:600px; 
+	height:300px; 
 	margin: 1em; 
 	padding: 5px;
 }
 
-.a .b .c {
-	border: 3px solid;
+button {
+	background-color:#DCDCDC ;
+}
+
+.btnCards {
+	background-color:#DCDCDC ;
+}
+
+.a {
+	border: 1px solid;
   	border-radius: 5px;
   	padding: 5px;
   	margin: 1em; 
-  	width:300px; 
-	height:300px;
+  	width:600px; 
+	/*height:300px;*/
+	background-color:#DCDCDC ;
 }
