--- a/Objects/my-app/src/App.css
+++ b/Objects/my-app/src/App.css
@@ -16,19 +16,29 @@ body {
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 120px;
  /* pointer-events: none;*/
 }
 
-.smile-logo {
- animation: pulse 3s ease infinite alternate, 
+.home-logo {
+   -webkit-animation: rotation 7s infinite linear;
+    height: 80px;
+}
+
+.community-logo {
+/* animation: pulse 3s ease infinite alternate, 
+  nudge 5s linear infinite alternate;
+  height: 80px;*/
+  /*pointer-events: none;*/
+  /*animation-name: example;
+  animation-duration: 4s;*/
+  animation: pulse 3s ease infinite alternate, 
   nudge 5s linear infinite alternate;
   height: 80px;
-  /*pointer-events: none;*/
   animation-name: example;
-  animation-duration: 4s;
+  animation-duration: 6s;
 }
-.music-logo {
+.calculator-logo {
   animation: pulse 3s ease infinite alternate, 
   nudge 5s linear infinite alternate;
   height: 80px;
@@ -36,7 +46,7 @@ body {
   animation-name: example;
   animation-duration: 4s;
 }
-.bell-logo {
+.account-logo {
   animation: pulse 3s ease infinite alternate, 
   nudge 5s linear infinite alternate;
   height: 80px;
@@ -44,7 +54,7 @@ body {
   animation-name: example;
   animation-duration: 4s;
 }
-.star-logo {
+.node-logo {
   animation: pulse 3s ease infinite alternate, 
   nudge 5s linear infinite alternate;
   height: 80px;
@@ -53,6 +63,28 @@ body {
   animation-duration: 4s;
   
 }
+
+
+.list-logo {
+  /*  -webkit-animation: rotation 7s infinite linear;
+     height: 80px;*/
+       animation: pulse 3s ease infinite alternate, 
+  nudge 5s linear infinite alternate;
+  height: 80px;
+  /*pointer-events: none;*/
+  animation-name: example;
+  animation-duration: 4s;
+}
+
+@-webkit-keyframes rotation {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(359deg);
+    }
+}
+
 
 .btn-icons {
   background-color: #0074D9;
@@ -72,17 +104,17 @@ body {
 }
 
 @keyframes example {
-  from {background-color: #0074D9;}
-  to {background-color: #7FDBFF;}
+  from {background-color:#bad9f4;}
+  to {background-color: #02b4f9;}
 }
 @keyframes pulse {
   0%, 100% {
-    background-color: red;
+    background-color: navy;
   }
 }
   @keyframes pulse {
     0%, 100% {
-      background-color: red;
+      background-color: purple;
     }
   }
 
